--- a/src/components/Pages/Home/o-home_hero.scss
+++ b/src/components/Pages/Home/o-home_hero.scss
@@ -6,6 +6,8 @@
 			max-height: calc(100vh - $headerHeight - 5rem);
 			height: 90vw;
 			margin-bottom: 5rem;
+			
+	
 		}
 
 		h1 {
@@ -20,13 +22,13 @@
 			flex-direction: column;
 			justify-content: space-between;
 			position: relative;
+			overflow: visible;
 
 			.o-hero_logo {
 				position: absolute;
 				top: 50%;
 				left: 50%;
 				transform: translate(-50%, -50%);
-				overflow: hidden;
 
 				.revealer {
 					position: absolute;
@@ -44,14 +46,15 @@
 			}
 
 			.c-drawnLogo {
-				
 				position: absolute;
 				top: 0;
 				right: 0;
-				transform: translateX(120%);
-				opacity: 0;
-				transition: all 2s cubic-bezier(0.19, 1, 0.22, 1);
-				transition-delay: 0.3s;
+
+				@include media("<=phoneL") {
+					display: none;
+				}
+		
+				
 
 				overflow: visible;
 
