--- a/src/styles/scss/objects/o-page.scss
+++ b/src/styles/scss/objects/o-page.scss
@@ -1,8 +1,14 @@
 .o-page {
-	
 	padding-top: $headerHeight;
 
-	
+	&_home {
+		opacity: 0;
+	}
 
+}
 
+.is-not-first-visit .o-page {
+	&_home {
+		opacity: 1;
+	}
 }
