--- a/src/styles/scss/_config.scss
+++ b/src/styles/scss/_config.scss
@@ -5,7 +5,7 @@
 
 @font-face {
 	font-family: "Kobe Bold";
-	src: url("../assets/fonts/Ginto.woff");
+	src: url("../assets/fonts/Kobe1.1-Bold.woff");
 }
 
 @font-face {
