--- a/src/styles/scss/_global.scss
+++ b/src/styles/scss/_global.scss
@@ -37,9 +37,6 @@ body {
 	min-height: 100%;
 }
 
-* {
-	font-family: 'Kobe' !important;
-}
 
 
 
@@ -95,6 +92,10 @@ ul {
 
 h1 {
 	font-family: 'Kobe Bold';
+}
+
+footer .email, footer p, .o-stories p, .swiper p, .c-steps p, .o-about h4, .o-page_contact h3, .o-page_contact p {
+	font-family: 'Kobe';
 }
 
 
