--- a/src/styles/scss/_vars.module.scss
+++ b/src/styles/scss/_vars.module.scss
@@ -24,7 +24,7 @@ $space-xxxl: calc(7 * 2rem);
 }
 
 //Colors
-$light: #F4F1E9;
+$light: #f4f1e9;
 $dark: #181818;
 $dark2: #2e2e2e;
 $lighterDark: #111111;
@@ -61,7 +61,7 @@ $loader-delay: 0.8;
 
 //Transition
 $transition: 600ms ease;
-$transition-menu: 0.7s cubic-bezier(0.645, 0.045, 0.355, 1.000);
+$transition-menu: 0.7s cubic-bezier(0.645, 0.045, 0.355, 1);
 $transition-expo: 1.2s cubic-bezier(1, 0, 0, 1);
 $transition-zoom: 4s cubic-bezier(0.075, 0.82, 0.165, 1);
 $translate-transition: opacity 0s cubic-bezier(0.35, 0.755, 0.42, 0.95),
@@ -81,12 +81,9 @@ $footerHeight: 80vw;
 //Breakpoints
 $tablet: 820px;
 
-
 $mobileItemHeight: 120vw;
 
-//Type mobile
-
-
+$headerShadow: 3px 4px 30px -12px rgba(0, 0, 0, 0.2);
 
 :export {
 	loaderDuration: $loader-duration;
