Hide site x axis on mobile

--- a/src/components/Menu/c-menu.scss
+++ b/src/components/Menu/c-menu.scss
@@ -83,8 +83,9 @@
 
 			.c-link {
 				color: $light;
-				font-size: 6rem;
-				line-height: 6rem;
+				font-size: 17vw;
+				line-height: 17vw;
+				
 				font-family: 'Kobe';
 				text-transform: uppercase;
 			}
