Fix mobile scroll issue

--- a/src/components/Pages/Home/o-home_hero.scss
+++ b/src/components/Pages/Home/o-home_hero.scss
@@ -1,5 +1,7 @@
 .o-page_home {
+	overflow: hidden;
 	.o-hero {
+		overflow: hidden;
 		.o-container {
 			padding-top: 5vw;
 			padding-bottom: 5vw;
