--- a/src/styles/scss/_global.scss
+++ b/src/styles/scss/_global.scss
@@ -40,7 +40,7 @@ body {
 	background-color: $light;
 	transition-delay: 300ms;
 	min-height: 100%;
-	overflow-x: hidden;
+	overflow: hidden;
 
 	&.is-new-page main {
 		opacity: 1;
