Hide site ooverflow while intro is playing

--- a/src/styles/scss/_vars.module.scss
+++ b/src/styles/scss/_vars.module.scss
@@ -93,6 +93,7 @@ $headerShadow: 3px 4px 30px -12px rgba(0, 0, 0, 0.2);
 		green: $green;
 		blue: $blue;
 		yellow: $yellow;
+		light: $light;
 	}
 	breakpoints: {
 		tablet: $tablet;
