Fix hero dimensions

--- a/src/components/Pages/Home/o-home_hero.scss
+++ b/src/components/Pages/Home/o-home_hero.scss
@@ -5,8 +5,7 @@
 		.o-container {
 			padding-top: 5vw;
 			padding-bottom: 5vw;
-			max-height: calc(100vh - $headerHeight - 5rem);
-			height: 90vw;
+			height: calc(100vh - $headerHeight - 5rem);
 			margin-bottom: 5rem;
 		}
 
