--- a/src/components/Button/c-arrow-button.scss
+++ b/src/components/Button/c-arrow-button.scss
@@ -1,9 +1,3 @@
-
-.css-1g04gm2-MuiButtonBase-root-MuiIconButton-root:hover {
-	opacity: 1 !important;
-	background-color: transparent !important;
-}
-
 .c-arrow-button {
 	&:focus {
 		outline: none;
@@ -18,6 +12,20 @@
 	overflow: hidden;
 	position: relative;
 
+	.hoverCircle {
+		transform: scale(0);
+		transform-origin: top;
+		transition: $transition;
+		position: sticky;
+		z-index: 0;
+	}
+
+	path {
+		z-index: 99;
+		position: sticky;
+		transition: $transition;
+	}
+
 	@include media("<=tablet") {
 		width: 3rem;
 		height: 3rem;
@@ -27,99 +35,54 @@
 		opacity: 1;
 	}
 
+	&:hover .hoverCircle {
+		transform: scale(1);
+	}
+
+	&.is-dark {
+		svg path {
+			fill: $dark;
+		}
+
+		&:hover svg path {
+			fill: $light;
+		}
+
+		circle:not(.hoverCircle) {
+			stroke: $dark;
+			stroke-width: 1.5px;
+		}
+
+		.hoverCircle {
+			fill: $dark;
+		}
+	}
+
+	&.is-light {
+		svg path {
+			fill: $light;
+		}
+
+
+		&:hover svg path {
+			fill: $dark;
+		}
+
+		.hoverCircle {
+			fill: $light;
+		}
+		
+
+
+		circle:not(.hoverCircle) {
+			stroke: $light;
+			stroke-width: 1.5px;
+		}
+	}
+
 	// &:hover::after {
 	// 	transform: scale(1);
 	// 	top: 0;
 	// 	left: 0;
 	// }
-
-	&:hover .circle {
-		transform: scale(1) ;
-	}
-
-
-
-	.circle {
-		width: 100%;
-		height: 100%;
-		position: absolute;
-		background-color: $light;
-		top: 0;
-		left: 0;
-		border-radius: 50%;
-		transform: scale(0);
-		transition: $transition;
-	}
-
-	.c-arrow-svg {
-		overflow: hidden;
-		position: relative;
-		display: block;
-		z-index: 999;
-
-		// circle:nth-of-type(2) {
-		// 	transition: 400ms ease;
-		// 	position: fixed;
-		// 	transform: scale(0.4);
-
-		// 	display: block;
-		// 	transform-origin: center;
-		// 	fill: $dark;
-		// }
-
-		// &:hover circle:nth-of-type(2) {
-		// 	fill: $dark;
-		// 	transform: scale(1);
-		// 	transition: 400ms ease;
-		// }
-
-		path {
-			fill: $grey;
-
-			position: static;
-
-			&:first-child {
-				transform: translateX(100%);
-			}
-		}
-
-		circle:not(.hoverCircle) {
-			stroke: $grey;
-
-			stroke-width: 2px;
-		}
-
-		.hoverCircle {
-			stroke: $dark;
-			stroke-width: 2px;
-		}
-	}
-
-	&.is-light {
-
-
-		&:hover path {
-			fill: $dark !important;
-		}
-
-		.circle {
-			background-color: $light;
-		}
-
-		&:hover path {
-			fill: $dark;
-		}
-
-		&::after {
-			background-color: $light;
-		}
-		circle {
-			stroke: $grey;
-			stroke-width: 2px;
-		}
-
-		path {
-			fill: $grey !important;
-		}
-	}
 }
