--- a/src/styles/scss/_global.scss
+++ b/src/styles/scss/_global.scss
@@ -22,6 +22,10 @@ body {
 	overflow-x: hidden;
 }
 
+.swiper-pagination-bullet-active {
+	background-color: $light;
+};
+
 .c-scrollbar {
 	z-index: 9999999;
 }
