Implement different kind of posts

--- a/src/components/Button/c-arrow-button.scss
+++ b/src/components/Button/c-arrow-button.scss
@@ -42,6 +42,7 @@
 	&.is-dark {
 		svg path {
 			fill: $dark;
+			fill-opacity: 0.5;
 		}
 
 		&:hover svg path {
@@ -50,6 +51,7 @@
 
 		circle:not(.hoverCircle) {
 			stroke: $dark;
+			stroke-opacity: 0.5;
 			stroke-width: 1.5px;
 		}
 
@@ -61,6 +63,7 @@
 	&.is-light {
 		svg path {
 			fill: $light;
+			fill-opacity: 0.5;
 		}
 
 
@@ -76,6 +79,7 @@
 
 		circle:not(.hoverCircle) {
 			stroke: $light;
+			stroke-opacity: 0.5;
 			stroke-width: 1.5px;
 		}
 	}
