--- a/src/components/Transition/intro.scss
+++ b/src/components/Transition/intro.scss
@@ -1,8 +1,8 @@
-header nav {
-	li {
-		opacity: 0;
-	}
-}
+// header nav {
+// 	li {
+// 		opacity: 0;
+// 	}
+// }
 
 .c-header_logo {
 	overflow: hidden;
