--- a/src/components/Button/c-arrow-button.scss
+++ b/src/components/Button/c-arrow-button.scss
@@ -1,4 +1,6 @@
 .c-arrow-button {
+	position: relative;
+
 	&:focus {
 		outline: none;
 	}
@@ -11,14 +13,6 @@
 	border-radius: 50%;
 	overflow: hidden;
 	position: relative;
-
-	.hoverCircle {
-		transform: scale(0);
-		transform-origin: top;
-		transition: $transition;
-		position: sticky;
-		z-index: 0;
-	}
 
 	path {
 		z-index: 99;
@@ -35,7 +29,20 @@
 		opacity: 1;
 	}
 
-	&:hover .hoverCircle {
+	.circle {
+		width: 100%;
+		height: 100%;
+
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: -1;
+		transform: scale(0);
+		transition: 400ms ease;
+		border-radius: 50%;
+	}
+
+	&:hover .circle {
 		transform: scale(1);
 	}
 
@@ -45,18 +52,19 @@
 			fill-opacity: 0.5;
 		}
 
+		.circle {
+			background-color: $dark;
+		}
+
 		&:hover svg path {
 			fill: $light;
+			fill-opacity: 1;
 		}
 
 		circle:not(.hoverCircle) {
 			stroke: $dark;
 			stroke-opacity: 0.5;
 			stroke-width: 1.5px;
-		}
-
-		.hoverCircle {
-			fill: $dark;
 		}
 	}
 
@@ -66,16 +74,15 @@
 			fill-opacity: 0.5;
 		}
 
+		.circle {
+			background-color: $light;
+		}
+
 
 		&:hover svg path {
 			fill: $dark;
+			fill-opacity: 1;
 		}
-
-		.hoverCircle {
-			fill: $light;
-		}
-		
-
 
 		circle:not(.hoverCircle) {
 			stroke: $light;
