--- a/src/styles/scss/_utils.scss
+++ b/src/styles/scss/_utils.scss
@@ -303,6 +303,31 @@
 	color: $light;
 }
 
+.accent {
+	position: relative;
+	padding-left: 1.3rem;
+
+	&-text::after {
+		width: 3rem;
+		height: 3rem;
+	}
+
+	&-left::after {
+		left: 0;
+	}
+
+	&::after {
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+
+		background-color: $yellow !important;
+		content: "";
+		border-radius: 50%;
+		mix-blend-mode: multiply;
+	}
+}
+
 .-stroke-light {
 	stroke: $light !important;
 }
