--- a/src/styles/scss/_utils.scss
+++ b/src/styles/scss/_utils.scss
@@ -307,20 +307,25 @@
 	position: relative;
 	padding-left: 1.3rem;
 
+	&-image::after {
+		width: 40%;
+		aspect-ratio: 1/1;
+		top: -15%;
+		left: -15%;
+	}
+
 	&-text::after {
 		width: 3rem;
 		height: 3rem;
-	}
-
-	&-left::after {
+		top: 50%;
+		transform: translateY(-50%);
 		left: 0;
 	}
 
+
+	
 	&::after {
 		position: absolute;
-		top: 50%;
-		transform: translateY(-50%);
-
 		background-color: $yellow !important;
 		content: "";
 		border-radius: 50%;
