Wrap pages in Page copmonent

--- a/src/styles/scss/_global.scss
+++ b/src/styles/scss/_global.scss
@@ -24,7 +24,7 @@ body {
 
 .swiper-pagination-bullet-active {
 	background-color: $light;
-};
+}
 
 .c-scrollbar {
 	z-index: 9999999;
@@ -89,7 +89,6 @@ ul {
 h1 {
 	font-family: "Kobe Bold";
 }
-
 
 @media (min-width: 700px) and (max-width: 1024px) {
 	html {
