Remove unecessary console logs

--- a/src/styles/scss/_vars.module.scss
+++ b/src/styles/scss/_vars.module.scss
@@ -94,6 +94,7 @@ $headerShadow: 3px 4px 30px -12px rgba(0, 0, 0, 0.2);
 		blue: $blue;
 		yellow: $yellow;
 		light: $light;
+		dark: $dark;
 	}
 	breakpoints: {
 		tablet: $tablet;
