--- a/src/styles/scss/_global.scss
+++ b/src/styles/scss/_global.scss
@@ -218,8 +218,14 @@ h1 {
 }
 
 [data-theme="dark"] {
-	background-color: $dark;
+	& {
+		background-color: $dark;
+	}
 	color: $light !important;
+
+	.line {
+		background-color: $light;
+	}
 
 	.c-header_logo svg path {
 		fill: $light;
@@ -229,10 +235,5 @@ h1 {
 		path {
 			fill: $light;
 		}
-	}
-
-	*::after,
-	*::before {
-		background-color: $light;
 	}
 }
