--- a/src/styles/scss/_utils.scss
+++ b/src/styles/scss/_utils.scss
@@ -315,9 +315,9 @@
 	}
 
 	&-text::after {
-		width: 3rem;
-		height: 3rem;
-		top: 50%;
+		width: 2.4rem;
+		height: 2.4rem;
+		top: 30%;
 		transform: translateY(-50%);
 		left: 0;
 	}
@@ -331,6 +331,10 @@
 		border-radius: 50%;
 		mix-blend-mode: multiply;
 	}
+}
+
+[data-theme="dark"] .accent::after {
+	mix-blend-mode: screen;
 }
 
 .-stroke-light {
