--- a/src/components/Pages/SingleProject/o-single-project.scss
+++ b/src/components/Pages/SingleProject/o-single-project.scss
@@ -262,6 +262,17 @@
 
 
 
+	.c-arrow {
+		width: 20vw;
+		max-width: 10rem;
+		height: auto;
+		transition: 400ms ease;
+		transition-delay: 100ms;
+	}
+
+	.c-link:hover .c-arrow {
+		transform: translateX(20%);
+	}
 
 	.o-next {
 
@@ -281,13 +292,6 @@
 			padding-bottom: 0;
 		}
 
-		.c-arrow {
-			width: 20vw;
-			max-width: 10rem;
-			height: auto;
-			transition: 400ms ease;
-			transition-delay: 100ms;
-		}
 
 		.marquee {
 			padding-top: 10vw;
