--- a/src/components/Containers/o-container.scss
+++ b/src/components/Containers/o-container.scss
@@ -1,15 +1,15 @@
-.o-container {
-	margin: 0 auto;
-	max-width: 1920px;
-	padding: 0 4.5rem;
+// .o-container {
+// 	margin: 0 auto;
+// 	max-width: 1920px;
+// 	padding: 0 4.5rem;
 
-	@include media("<=phoneL") {
-		padding: 0 2rem;
-	}
-}
+// 	@include media("<=phoneL") {
+// 		padding: 0 2rem;
+// 	}
+// }
 
-.o-container.-mobile-padding-none {
-	@include media("<=tablet") {
-		padding: 0;
-	}
-}
+// .o-container.-mobile-padding-none {
+// 	@include media("<=tablet") {
+// 		padding: 0;
+// 	}
+// }
