--- a/src/styles/scss/_utils.scss
+++ b/src/styles/scss/_utils.scss
@@ -317,24 +317,18 @@
 	&-text::after {
 		width: 2.4rem;
 		height: 2.4rem;
-		top: 30%;
+		top: 50%;
 		transform: translateY(-50%);
-		left: 0;
+		left: 1%;
+		opacity: 0.8;
 	}
 
-
-	
 	&::after {
 		position: absolute;
 		background-color: $yellow !important;
 		content: "";
 		border-radius: 50%;
-		mix-blend-mode: multiply;
 	}
-}
-
-[data-theme="dark"] .accent::after {
-	mix-blend-mode: screen;
 }
 
 .-stroke-light {
