--- a/src/styles/scss/_global.scss
+++ b/src/styles/scss/_global.scss
@@ -18,6 +18,10 @@
 // 	border-radius: 20px; /* roundness of the scroll thumb */
 // }
 
+.swiper-slide-active {
+	overflow-y: overlay !important;
+}
+
 body {
 	overflow-x: hidden;
 }
