--- a/src/styles/scss/_global.scss
+++ b/src/styles/scss/_global.scss
@@ -18,7 +18,7 @@
 // 	border-radius: 20px; /* roundness of the scroll thumb */
 // }
 
-.swiper-slide-active {
+.c-stories .swiper-slide-active {
 	overflow-y: overlay !important;
 }
 
