Reimplement home page logo

--- a/src/components/Transition/intro.scss
+++ b/src/components/Transition/intro.scss
@@ -4,20 +4,20 @@
 // 	}
 // }
 
-.c-header_logo {
-	overflow: hidden;
-	svg {
-		overflow: hidden;
-	}
-}
+// .c-header_logo {
+// 	overflow: hidden;
+// 	svg {
+// 		overflow: hidden;
+// 	}
+// }
 
-header .c-header_logo {
-	opacity: 0
-}
+// header .c-header_logo {
+// 	opacity: 0
+// }
 
-.is-first-visit header {
-	box-shadow: 3px 4px 30px -12px rgba(0, 0, 0, 0.2);
-}
+// .is-first-visit header {
+// 	box-shadow: 3px 4px 30px -12px rgba(0, 0, 0, 0.2);
+// }
 
 .c-header_nav-btn  {
 	opacity: 0;
@@ -31,11 +31,11 @@ header .c-header_logo {
 	opacity: 1;
 }
 
-.c-drawnLogo {
-	&:not(footer .c-drawnLogo) {
-		opacity: 0;
-	}
-}
+// .c-drawnLogo {
+// 	&:not(footer .c-drawnLogo) {
+// 		opacity: 0;
+// 	}
+// }
 .is-not-first-visit .c-drawnLogo {
 	&:not(footer .c-drawnLogo) {
 		opacity: 1;
