Implement split text

--- a/src/styles/scss/_config.scss
+++ b/src/styles/scss/_config.scss
@@ -13,23 +13,22 @@
 	src: url("../assets/fonts/Ginto.woff");
 }
 
-
 @font-face {
 	font-family: "OggItalic";
 	src: url("../assets/fonts/OggItalic.ttf");
 }
-
-
 
 @font-face {
 	font-family: "Neue Mtl";
 	src: url("../assets/fonts/NeueMontreal-Regular.otf");
 }
 
+@font-face {
+	font-family: "America";
+	src: url("../assets//fonts/GT-America-Standard-Regular-Trial.woff2");
+}
 
 em {
 	position: relative;
 	font-style: normal;
 }
-
-
