--- a/src/components/Menu/c-menu.scss
+++ b/src/components/Menu/c-menu.scss
@@ -3,6 +3,10 @@
 	top: 0;
 	left: 0;
 	min-height: 100vh;
+
+	/* mobile safari viewport fix */
+	
+	min-height: -webkit-fill-available;
 	width: 100vw;
 	display: block;
 	z-index: 99999;
@@ -14,8 +18,6 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-
-
 
 	&.is-active {
 		transform: translateY(0);
