--- a/src/styles/scss/_utils.scss
+++ b/src/styles/scss/_utils.scss
@@ -33,26 +33,7 @@
 	padding-bottom: $space-xxxl;
 }
 
-.-overlay-dark {
-	&::after {
-		transition: 400ms ease;
-		position: absolute;
-		top: 0;
-		left: 0;
-		content: "";
-		background-color: #181818;
-		width: 100%;
-		height: 100%;
-		opacity: 0;
 
-		@include media("<=tablet") {
-			display: none;
-		}
-	}
-	&:hover::after {
-		opacity: 0.4;
-	}
-}
 
 .-padding-bottom-lg {
 	padding-bottom: $space-lg;
@@ -194,26 +175,28 @@
 	}
 }
 
-.-hover-underline {
-	&:hover .-underline::after {
-		transform: scaleX(1);
-		transform-origin: left;
-	}
-	&:hover::after {
-		transform: scaleX(1);
-		transform-origin: left;
-	}
-}
-
-.-hover-underline-label {
-	&:hover .label::after {
-		transform: scaleX(1);
-		transform-origin: left;
+@media (hover: hover) {
+	.-hover-underline {
+		&:hover .-underline::after {
+			transform: scaleX(1);
+			transform-origin: left;
+		}
+		&:hover::after {
+			transform: scaleX(1);
+			transform-origin: left;
+		}
 	}
 
-	&:hover .label::after {
-		transform: scaleX(1);
-		transform-origin: left;
+	.-hover-underline-label {
+		&:hover .label::after {
+			transform: scaleX(1);
+			transform-origin: left;
+		}
+
+		&:hover .label::after {
+			transform: scaleX(1);
+			transform-origin: left;
+		}
 	}
 }
 
@@ -443,7 +426,6 @@
 	opacity: 0;
 	transform-origin: center;
 }
-
 
 .-ul-small,
 .-text-tiny {
