--- a/src/components/Menu/c-menu.scss
+++ b/src/components/Menu/c-menu.scss
@@ -1,90 +1,82 @@
-.c-menu {
-	position: fixed;
-	top: 0;
-	left: 0;
-	/* mobile safari viewport fix */
-	min-height: -webkit-fill-available;
-	// min-height: 100vh;
+// .c-menu {
+// 	position: fixed;
+// 	top: 0;
+// 	left: 0;
+// 	/* mobile safari viewport fix */
+// 	min-height: -webkit-fill-available;
+// 	// min-height: 100vh;
 
-	width: 100vw;
-	display: block;
-	z-index: 99999;
-	transform: translateY(-100%);
-	transform-origin: top;
+// 	width: 100vw;
+// 	display: block;
+// 	z-index: 99999;
+// 	transform: translateY(-100%);
+// 	transform-origin: top;
 
-	background-color: $dark;
+// 	background-color: $dark;
 
-	display: flex;
-	align-items: center;
-	justify-content: center;
+// 	display: flex;
+// 	align-items: center;
+// 	justify-content: center;
 
-	&.is-active {
-		transform: translateY(0);
+// 	.c-list_social {
+// 		position: absolute;
+// 		bottom: 0;
+// 		left: 0;
+// 		padding-left: inherit;
+// 		padding-bottom: 1rem;
 
-		.c-list_social {
-			opacity: 1;
-		}
-	}
+// 		a svg {
+// 			font-size: 2rem;
+// 			fill: $light;
+// 		}
+// 	}
 
-	.c-list_social {
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		padding-left: inherit;
-		padding-bottom: 1rem;
+// 	&_nav {
+// 		height: 100%;
+// 		width: 100%;
 
-		a svg {
-			font-size: 2rem;
-			fill: $light;
-		}
-	}
+// 		ul {
+// 			height: 100%;
+// 			width: 100%;
+// 			display: flex;
+// 			flex-direction: column;
+// 			align-items: center;
+// 			justify-content: center;
+// 			height: 100%;
+// 			text-align: center;
 
-	&_nav {
-		height: 100%;
-		width: 100%;
+// 			li {
+// 				margin-right: 0 !important;
+// 				text-transform: uppercase;
+// 				overflow: hidden;
 
-		ul {
-			height: 100%;
-			width: 100%;
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			justify-content: center;
-			height: 100%;
-			text-align: center;
+// 				.c-highlight {
+// 					height: 100%;
+// 				}
 
-			li {
-				margin-right: 0 !important;
-				text-transform: uppercase;
-				overflow: hidden;
+// 				.c-link {
+// 					transform: translateY(-150%);
+// 					opacity: 0;
+// 					display: block;
+// 					transition: none;
+// 				}
 
-				.c-highlight {
-					height: 100%;
-				}
+// 				&:not(:last-child) {
+// 					margin-bottom: 3rem;
+// 				}
+// 			}
 
-				.c-link {
-					transform: translateY(-150%);
-					opacity: 0;
-					display: block;
-					transition: none;
-				}
+// 			li:hover .c-link {
+// 				color: lighten($yellow, 10%);
+// 			}
 
-				&:not(:last-child) {
-					margin-bottom: 3rem;
-				}
-			}
+// 			.c-link {
+// 				color: $light;
+// 				font-size: 17vw;
+// 				line-height: 17vw;
 
-			li:hover .c-link {
-				color: lighten($yellow, 10%);
-			}
-
-			.c-link {
-				color: $light;
-				font-size: 17vw;
-				line-height: 17vw;
-
-				text-transform: uppercase;
-			}
-		}
-	}
-}
+// 				text-transform: uppercase;
+// 			}
+// 		}
+// 	}
+// }
