--- a/src/styles/scss/_global.scss
+++ b/src/styles/scss/_global.scss
@@ -22,6 +22,10 @@
 	overflow-y: overlay !important;
 }
 
+.Page .motion-wrap .motion-word:not(:last-child) {
+	margin-right: 0.5rem;
+}
+
 strong {
 	font-weight: 800;
 }
@@ -58,8 +62,6 @@ body {
 	min-height: 100%;
 	overflow: hidden;
 }
-
-
 
 .c-heading.-h2 {
 	font-size: 2rem;
