--- a/src/styles/scss/_global.scss
+++ b/src/styles/scss/_global.scss
@@ -22,7 +22,8 @@
 	overflow-y: overlay !important;
 }
 
-.Page .motion-wrap .motion-word:not(:last-child) {
+.Page .motion-wrap .motion-word:not(:last-child),
+footer .motion-wrap .motion-word:not(:last-child) {
 	margin-right: 0.5rem;
 }
 
