--- a/src/components/Vector/c-frame.scss
+++ b/src/components/Vector/c-frame.scss
@@ -63,10 +63,11 @@
 .-hover-frame:hover .c-frame {
 	transform: rotate(0) scale(1.1);
 	opacity: 1;
+	display: none;
 
 	&_svg {
 		transform: scaleX(1) scaleY(1);
-    opacity: 1;
+		opacity: 1;
 	}
 }
 
@@ -78,5 +79,3 @@
 	}
 	@include frameRevealDefaultStyles();
 }
-
-
