Remove commented code

--- a/src/components/Button/c-arrow-button.scss
+++ b/src/components/Button/c-arrow-button.scss
@@ -17,7 +17,7 @@
 	path {
 		z-index: 99;
 		position: sticky;
-		transition: $transition;
+		// transition: $transition;
 	}
 
 	@include media("<=tablet") {
