--- a/src/components/Views/SingleProject/o-single-project.scss
+++ b/src/components/Views/SingleProject/o-single-project.scss
@@ -38,13 +38,13 @@
 			animation-delay: 2s;
 		}
 
-		.c-figure .c-frame {
-			@include frameRevealDefaultStyles();
-		}
+		// .c-figure .c-frame {
+		// 	@include frameRevealDefaultStyles();
+		// }
 
-		.c-figure.-frame-reveal .c-frame {
-			@include frameReveal(2s, forwards);
-		}
+		// .c-figure.-frame-reveal .c-frame {
+		// 	@include frameReveal(2s, forwards);
+		// }
 
 		.o-container {
 			@include media("<=phoneL") {
