--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,30 @@ code {
     monospace;
 }
 
+@font-face {
+  font-family: 'Neue Mtl';
+  src: url("./styles/assets/fonts/NeueMontreal-Regular.otf");
+  font-weight: 200;
+}
+
+@font-face {
+  font-family: 'Neue Mtl';
+  src: url("./styles/assets/fonts/NeueMontreal-Medium.otf");
+  font-weight: 600;
+}
+
+* strong {
+  font-weight: 600 !important;
+}
+
+body {
+  font-family: Neue Mtl;
+}
+
+h1, h2, h3 {
+  font-family: Kobe Bold;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
