--- a/src/styles/scss/_utils.scss
+++ b/src/styles/scss/_utils.scss
@@ -73,6 +73,14 @@
 	color: $light;
 }
 
+.accent-multiply::after {
+	mix-blend-mode: multiply;
+}
+
+.accent-screen::after {
+	mix-blend-mode: screen;
+}
+
 .accent {
 	position: relative;
 
