--- a/src/components/DropdownMenu/DropdownMenu.css
+++ b/src/components/DropdownMenu/DropdownMenu.css
@@ -1,3 +1,7 @@
+.DropdownMenu {
+	transition: visibility 0.8s;
+}
+
 .DropdownMenu .Link {
 	transition: opacity 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19),
 		transform 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
