--- a/src/components/Views/Home/Parts/Hero.css
+++ b/src/components/Views/Home/Parts/Hero.css
@@ -21,9 +21,15 @@
   }
 }
 
-@media screen and (max-width: 1900px) {
+@media screen and (min-width: 769px) {
   .HeroLogo {
     transform: translate(-65%, -50%);
+  }
+}
+
+@media screen and (max-width: 769px) {
+  .HeroLogo {
+    transform: translateX(-10%);
   }
 }
 
