--- a/src/components/Header/Burger.module.css
+++ b/src/components/Header/Burger.module.css
@@ -1,9 +1,10 @@
 .isBurger::before {
-	transform: translate(-50%, -50%) translateY(-3px);
+	transform: translate(-50%, -50%) translateY(-2px);
 }
 
 .isBurger::after {
-	transform: translate(-50%, -50%) translateY(3px);
+	transform: translate(-50%, -50%) translateY(2px
+	);
 }
 
 .isClose::before {
