--- a/src/components/Link/Cta.module.css
+++ b/src/components/Link/Cta.module.css
@@ -1,22 +1,14 @@
 .Cta:hover svg,
 .Cta:hover span {
-	transform: translateX(20px);
+	transform: translateX(7px);
+}
+
+.Cta svg, .Cta span {
+	transition: 0.5s cubic-bezier(.645,.045,.355,1);
 }
 
 .Cta:hover span {
 	transition-delay: 0.18s;
 }
 
-.Cta svg,
-.Cta span,
-.Cta span::after {
-	transition: 3s cubic-bezier(0.075, 0.82, 0.165, 1);
-}
 
-.Cta span {
-	transition-delay: 0s;
-}
-
-.Cta:hover span::after {
-	transform: translateY(-50%) translateX(-10px) scale(1.4);
-}
