Only apply hover frame effect on hover

--- a/src/styles/scss/_global.scss
+++ b/src/styles/scss/_global.scss
@@ -30,9 +30,9 @@
 	justify-content: center;
 }
 
-.Page .motion-wrap .motion-word:not(:last-child),
+.motion-wrap .motion-word:not(:last-child),
 footer .motion-wrap .motion-word:not(:last-child) {
-	margin-right: 0.5rem;
+	margin-right: 0.24em;
 }
 
 strong {
