--- a/src/styles/css/globals.css
+++ b/src/styles/css/globals.css
@@ -3,6 +3,8 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
 		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
 		sans-serif;
+	font-family: "Riposte";
+	font-weight: 200;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
@@ -18,7 +20,6 @@ body {
 
 .flickity-slider {
 	display: flex;
-	
 }
 
 code {
@@ -26,16 +27,46 @@ code {
 		monospace;
 }
 
+/* @font-face {
+	font-family: "Adieu";
+	src: url("../fonts/Adieu/GTFAdieuTRIAL-Bold.otf");
+	font-weight: 700;
+} */
+
 @font-face {
-	font-family: "Neue Mtl";
-	src: url("../fonts/NeueMontreal-Regular.otf");
+	font-family: "Adieu";
+	src: url("../fonts/Adieu/GTFAdieuTRIAL-Regular.otf");
+	font-weight: 400;
+}
+
+@font-face {
+	font-family: "Adieu";
+	src: url("../fonts/Adieu/GTFAdieuTRIAL-Regular.otf");
+	font-weight: 700;
+}
+
+@font-face {
+	font-family: "Riposte";
+	src: url("../fonts/Riposte/GTFRiposteTRIAL-Light.otf");
 	font-weight: 200;
 }
 
 @font-face {
-	font-family: "Neue Mtl";
-	src: url("../fonts/NeueMontreal-Bold.otf");
+	font-family: "Riposte";
+	src: url("../fonts/Riposte/GTFRiposteTRIAL-Regular.otf");
+	font-weight: 400;
+}
+
+@font-face {
+	font-family: "Riposte";
+	src: url("../fonts/Riposte/GTFRiposteTRIAL-SemiBold.otf");
 	font-weight: 600;
+}
+
+@font-face {
+	font-family: "Riposte";
+	src: url("../fonts/Riposte/GTFRiposteTRIAL-Bold.otf");
+	font-weight: 700;
 }
 
 * strong {
@@ -45,9 +76,9 @@ code {
 body,
 #__next,
 .Layout {
-	font-family: Neue Mtl;
 	-webkit-font-smoothing: antialiased;
 	min-height: 100vh;
+	font-weight: 2;
 }
 
 h1,
