--- a/src/components/DropdownMenu/DropdownMenu.module.css
+++ b/src/components/DropdownMenu/DropdownMenu.module.css
@@ -20,3 +20,7 @@
 .DropdownMenuList li:nth-child(3) a {
 	transition-delay: 0.45s;
 }
+
+.DropdownMenuList li:nth-child(4) a {
+	transition-delay: 0.56s;
+}
