Make Cta only hoverable on desktop

--- a/src/components/Link/Cta.module.css
+++ b/src/components/Link/Cta.module.css
@@ -1,14 +1,15 @@
-.Cta:hover svg,
-.Cta:hover span {
-	transform: translateX(7px);
+@media (hover: hover) {
+	.Cta:hover svg,
+	.Cta:hover span {
+		transform: translateX(7px);
+	}
 }
 
-.Cta svg, .Cta span {
-	transition: 0.5s cubic-bezier(.645,.045,.355,1);
+.Cta svg,
+.Cta span {
+	transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
 .Cta:hover span {
 	transition-delay: 0.18s;
 }
-
-
